# Kasi_algorithms

./: README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
core/: forms.py  models.py  views.py
core/migrations/: 0016_post_url_alter_post_title.py  0017_alter_post_url.py  0018_alter_post_url.py  0019_alter_post_url.py  0020_alter_post_image.py
core/project/: settings.py  urls.py
core/project/static/css/: style.css  styles.css
core/staticfiles/: staticfiles.json
core/staticfiles/css/: main.css  styles.css
core/staticfiles/js/: notifications.a1ed5996ba93.js  script.js
core/templates/core/: about.html  contact.html  index.html  post_detail.html  post_form.html  prompt.html  subscribe.html  terms.html  user_posts.html
emails/: forms.py  views.py
emails/migrations/: 0002_rename_template_emailtemplate_html_content_and_more.py  0003_remove_emailtemplate_html_content_and_more.py
emails/templates/emails/: subscribe.html
staticfiles/: staticfiles.json
staticfiles/css/: form.css
submit/: forms.py  models.py  urls.py  views.py
submit/migrations/: 0011_remove_profile_category_remove_profile_is_paid_and_more.py  0012_alter_profile_image.py  0013_alter_profile_image.py
submit/templates/submit/: login.html  password_reset.html  profile.html  register.html
